--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ a:focus {border:0; outline:0; color:inherit;}
 .container.nopadding {
 	padding:0;
 }
-
+.container.paddingleftmenu{
+	padding: 0 15px 0 0;
+}
 .goldbutton {
 	background:#bca157;
 	color:#ffffff;
@@ -115,8 +117,49 @@ ul.menu li {
 	padding:5px 10px;
 }
 ul.menu li a {
-	
 }
+
+.left-menu {}
+.left-menu ul {
+	padding:0;
+	color:#ffffff;
+}
+.left-menu ul li {
+	list-style-type:none;
+	background:#005bab;
+}
+.left-menu ul li.active {
+	background:#bca157;
+}
+.left-menu ul li a {
+	font-size:16px;
+	text-decoration:none;
+	color:#ffffff;
+	padding: 10px 5px 10px 20px;
+	display:block;
+}
+.left-menu ul li.active a {}
+.left-menu ul li > ul {
+	background:#1b4467;
+	padding: 5px 5px 10px 30px;
+}
+.left-menu ul li > ul li {
+	background:transparent;
+	padding:7px 5px;
+}
+.left-menu ul li > ul li.active {
+	background:transparent;
+}
+.left-menu ul li > ul li a {
+	font-size:13px;
+	text-decoration:underline;
+	padding:0;
+}
+.left-menu ul li > ul li.active a {
+	color:#bca157;
+}
+
+
 /* ---------------- /header ---------------------- */
 
 
@@ -133,6 +176,55 @@ ul.menu li a {
 	text-transform:uppercase;
 	font-weight:bold;
 	color:#ffffff;
+	margin: 15px 0;
+}
+
+.services-element {
+	position:relative;
+	z-index:10;
+	padding:15px;
+}
+.services-element h3 {
+	text-align:center;
+}
+.services-element .image {}
+.services-element .image img {
+	border-radius:10px;
+	width:100%;
+}
+.services-element .info {
+	display:none;
+	position:absolute;
+	width:100%;
+	height:100%;
+	min-height:210px;
+	top:0;
+	left:0;
+	z-index:50;
+	background: rgba(0, 91, 170, 0.81);
+	box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.23);
+	-webkit-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.23);
+	-moz-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.23);
+	-o-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.23);
+	color:#ffffff;
+	padding:20px;
+}
+.services-element .info h3 {
+	padding-bottom:10px;
+}
+.services-element .info h3 a {
+	color:#ffffff;
+}
+.services-element .info p {
+	text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.44);
+}
+.services-element .info .goldbutton {
+	font-size:18px;
+	display:block;
+	text-align:center;
+	text-decoration:none;
+	position:relative;
+	bottom:15px;
 }
 
 /* ---------------- /content --------------------- */
