--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,41 @@ ul.menu li a {
 	display:inline-block;
 }
 
+.feedback-block {
+	padding:40px 0;
+}
+.feedback-block label {
+	display:inline-block;
+	min-width:115px;
+	width:auto;
+	vertical-align:top;
+	font-weight:normal;
+}
+.feedback-block input[type="text"], .feedback-block textarea {
+	display:inline-block;
+	width:100%;
+	max-width: 500px;
+	vertical-align:top;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ababab;
+	border-radius: 10px;
+	background-color: #ffffff;
+	box-shadow: inset 0px 0px 7px 0px rgba(0, 0, 0, 0.33);
+	padding:5px 10px;
+	margin-bottom:10px;
+	resize:none;
+}
+.feedback-block input[type="button"] {
+	border:0;
+	display:block;
+	margin: 0 auto;
+	text-align:center;
+	padding:8px 45px;
+	margin-top:15px;
+	font-size:16px;
+}
+
 /* ---------------- /content --------------------- */
 
 
