--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,9 @@ h1 {
 	text-align:center;
 	margin-bottom:10px;
 }
+h1 span {
+	color:#939393;
+}
 h2 {
 	font-size:24px;
 	font-weight:400;
@@ -62,6 +65,7 @@ a:focus {border:0; outline:0; color:inherit;}
 	border-radius: 10px;
 	font-size:16px;
 	padding:7px 15px;
+	text-decoration:none;
 }
 .bluebutton {
 	background:#005baa;
@@ -69,6 +73,15 @@ a:focus {border:0; outline:0; color:inherit;}
 	border-radius: 10px;
 	font-size:16px;
 	padding:7px 15px;
+	text-decoration:none;
+}
+.bluebutton.text-center {
+	margin:0 auto;
+	display:table;
+}
+.bluebutton.big {
+	padding:7px 55px;
+	font-size:18px;
 }
 
 /* ---------------- ------- --------------------- */
@@ -112,6 +125,14 @@ a:focus {border:0; outline:0; color:inherit;}
 	margin-top:10px;
 }
 
+.menu-wrap {
+	overflow:hidden;
+}
+.menu-block {
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+	margin-bottom:20px;
+}
+
 ul.menu {
 	padding:10px 0;
 	margin:0 auto;
@@ -124,6 +145,11 @@ ul.menu li {
 	padding:5px 10px;
 }
 ul.menu li a {
+}
+ul.menu li.active {}
+ul.menu li.active a {
+	color:#bca157;
+	text-decoration:none;
 }
 
 .left-menu {}
@@ -164,6 +190,47 @@ ul.menu li a {
 }
 .left-menu ul li > ul li.active a {
 	color:#bca157;
+}
+
+
+.left-menu.livest {
+	background:transparent;
+	box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.1);
+	padding:25px 20px 25px 40px;
+}
+.left-menu.livest h3 {
+}
+.left-menu.livest ul {
+	padding:0;
+}
+.left-menu.livest ul li {
+	list-style-type:none;
+	background:transparent;
+}
+.left-menu.livest ul li.active {
+}
+.left-menu.livest ul li a {
+	font-size:16px;
+	color:#005bab;
+	text-decoration:underline;
+	padding: 10px 5px 10px 0px;
+	display:block;
+}
+.left-menu.livest ul li.active a {
+	text-decoration:none;
+	color:#bca157;
+}
+
+
+.sort {
+	
+}
+.sort a {
+	margin-right:30px;
+}
+.sort a.active {
+	color:#000000;
+	text-decoration:none;
 }
 
 
@@ -227,6 +294,7 @@ ul.menu li a {
 }
 .services-element .info p {
 	text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.44);
+	min-height: 131px;
 }
 .services-element .info .goldbutton {
 	font-size:18px;
@@ -249,6 +317,7 @@ ul.menu li a {
 .actions-element {
 	max-height:300px;
 	position:relative;
+	margin:30px 0;
 }
 .actions-element img {
 	width:100%;
@@ -274,9 +343,18 @@ ul.menu li a {
 
 .specials-element {
 	padding: 40px 15px;
+	position:relative;
 }
 .specials-element .info {
-	
+	position:relative;
+	min-height: 150px;
+	height: 100%;
+}
+.specials-element .info a.bluebutton {
+	text-decoration:none;
+	padding:7px 35px;
+	position:absolute;
+	bottom:0;
 }
 .specials-element .image {
 	float:left;
