--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,11 @@ h3 {
 	font-weight:400;
 	margin-top:0;
 }
+h4 {
+	font-size:16px;
+	font-weight:400;
+	margin-top:0;
+}
 a {
 	color:#005bab;
 	text-decoration:underline;
@@ -430,12 +435,11 @@ ul.menu li.active a {
 	background:#a9b4be;
 }
 .catalog-element .info .count input {
-	width:25px;
-	height:25px;
-	border:0;
+	width:27px;
+	height:27px;
+	border:1px solid #195488;
 	color:#000000;
 	display:inline-block;
-	margin:0 1px;
 	box-shadow: inset 0px 1px 7px 0px rgba(4, 62, 113, 0.22);
 	text-align:center;
 }
@@ -452,6 +456,86 @@ ul.menu li.active a {
 	padding:8px 50px;
 	border-radius:10px;
 }
+
+
+.catalog-info {}
+.catalog-info .image {
+	box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.16);
+}
+.catalog-info .image img {
+	width:100%;
+}
+.catalog-info .info {
+	margin-bottom:80px;
+}
+.catalog-info .price {
+	font-weight:bold;
+}
+.catalog-info .price .old {
+	font-size: 14px;
+	text-decoration:line-through;
+	margin-right:10px;
+}
+.catalog-info .price .discount {
+	color:#bca157;
+}
+.catalog-info .info .count {
+	display:inline-block;
+	text-align:center;
+	margin:15px 0;
+}
+.catalog-info .info .count button {
+	border:0;
+	color:#000000;
+	width:25px;
+	height:25px;
+	display:inline-block;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.38);
+	background:#ffffff;
+}
+.catalog-info .info .count button:hover {
+	background:#a9b4be;
+}
+.catalog-info .info .count input {
+	width:27px;
+	height:27px;
+	border:1px solid #195488;
+	color:#000000;
+	display:inline-block;
+	box-shadow: inset 0px 1px 7px 0px rgba(4, 62, 113, 0.22);
+	text-align:center;
+}
+.catalog-info .info input.buy {
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+	background:#bca157 url(/images/buy-white.png) no-repeat right 10px center ;
+	border:0;
+	display:inline-block;
+	margin-left:80px;
+	text-align:center;
+	text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.34);
+	font-size:18px;
+	padding:8px 50px;
+	border-radius:10px;
+	color:#ffffff;
+}
+.catalog-info .info .sertificat-gallery {
+	padding:0;
+}
+.catalog-info .info .sertificat-gallery li {
+	display:inline-block;
+	width: 105px;
+	height: 105px;
+	box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.22),inset 0px 0px 10px 0px rgba(0, 0, 0, 0.63);
+	border:4px solid #ffffff;
+	overflow:hidden
+}
+.catalog-info .info .sertificat-gallery li a {}
+.catalog-info .info .sertificat-gallery li img {
+	box-shadow:inset 0px 0px 10px 0px rgba(0, 0, 0, 0.63);
+	width:100%;
+	height:100%;
+}
+
 
 .actions-element {
 	max-height:300px;
