Add page staff inner
Stranica vnutryaka sotrudnikov gotova

--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,11 @@ ul.menu li.active a {
 }
 
 
+.specials-info {
+	padding:40px 15px;
+}
+
+
 .extras-element {
 	padding: 40px 15px;
 	text-align:center;
