--- a/css/styles.css
+++ b/css/styles.css
@@ -813,6 +813,13 @@ ul.menu li.active a {
 }
 
 
+.article-block {
+	margin-top:30px;
+}
+.article-info {
+	margin-top:40px;
+}
+
 
 /* ---------------- /content --------------------- */
 
